[project]
name = "Knitter"
version = "0.1.0a1"
description = "A static site generator originally built for use in the development of the Dev8 website."
authors = [
    {name = "Sean Francis N. Ballais", email = "sean@seanballais.com"},
]
dependencies = [
    "jinja2>=3.1.3",
    "livereload>=2.6.3",
    "rcssmin>=1.1.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MPL-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
knitter = "knitter.__main__:main"

[tool.pdm]
distribution = true
